# notebook

./: .gitignore  pyproject.toml
signate_smbc_202506/: README.md  pyproject.toml
signate_smbc_202506/notebooks/: 01_exploratory_data_analysis.ipynb  02_data_preprocessing.ipynb  03_modeling_baseline.ipynb  04_modeling_hypara_tuning.ipynb  04_modeling_random_forest.ipynb
signate_smbc_202506/notebooks/.ipynb_checkpoints/: 01_exploratory_data_analysis-checkpoint.ipynb  04_modeling_random_forest-checkpoint.ipynb
signate_smbc_202506/notebooks/fix/: 04_modeling_random_forest_fix.ipynb  05_modeling_lightgbm.ipynb
signate_smbc_202506/src/: cleansing.py  data_loader.py  parameters.py  preprocessor.py
