[project]
name = "signate_smbc_202506"
version = "0.1.0"
description = "SIGNATE SMBC 2025/06 コンペティション"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.5.0",
    "catboost>=1.0.0",
    "optuna>=2.10.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "tqdm>=4.62.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 